Apply refactoring for original Log4JPatch to the newer version